--- a/scss/_experience.scss
+++ b/scss/_experience.scss
@@ -1,6 +1,6 @@
 #page4 {
-    height: 800px;
-    background-color: $lightblue;
+    height: 650px;
+    background-color: $darkblue;
     padding: 5% 0;
 }
 
