--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ p span {
 }
 
 #page1 {
-  height: 800px;
+  height: 650px;
   background-color: #101024;
   padding: 5% 0;
 }
@@ -131,8 +131,20 @@ p span {
   color: #f3bc17;
 }
 
+@media screen and (max-width: 768px) {
+  #page1 {
+    height: 700px;
+  }
+  .socialMedia {
+    padding-top: 20px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .socialMedia {
+    padding-top: 20px;
+  }
+}
 #page2 {
-  height: 800px;
   background-color: #121227;
   padding: 5% 0;
 }
@@ -147,7 +159,7 @@ p span {
 }
 
 #skills {
-  height: 90vh;
+  height: 750px;
   background-color: #101024;
   padding: 5% 0;
 }
@@ -171,12 +183,43 @@ h5 {
   font-family: "Montserrat";
 }
 
+.about {
+  padding-bottom: 5%;
+  height: 650px;
+}
 .about .intro p {
   font-size: 15px;
 }
 
+@media screen and (max-width: 768px) {
+  .about {
+    height: 900px;
+  }
+  .skills {
+    height: 400px;
+  }
+}
+@media screen and (max-width: 320px) {
+  #picture2 {
+    width: 300px;
+    height: auto;
+  }
+  #picture2 img {
+    width: 280px;
+    height: auto;
+  }
+  .skills ul {
+    gap: 8px;
+  }
+  .skills ul li a img {
+    width: 80px;
+  }
+  #skills {
+    height: 500px;
+  }
+}
 #page3 {
-  height: 800px;
+  height: 650px;
   background-color: #121227;
   padding: 5% 0;
 }
@@ -321,8 +364,13 @@ h5 {
   word-wrap: break-word;
 }
 
+@media screen and (max-width: 320px) {
+  #page3 {
+    height: 1000px;
+  }
+}
 #page4 {
-  height: 800px;
+  height: 650px;
   background-color: #101024;
   padding: 5% 0;
 }
@@ -451,8 +499,8 @@ h5 {
 }
 
 #page5 {
-  height: 800px;
-  background-color: #101024;
+  height: 650px;
+  background-color: #121227;
   padding: 5% 0;
 }
 
@@ -527,6 +575,45 @@ form .submit {
   margin-left: 250px;
 }
 
+@media screen and (max-width: 768px) {
+  form {
+    margin-right: 20px;
+  }
+  form input {
+    width: 250px;
+  }
+  form textarea {
+    width: 250px;
+  }
+  form .submit {
+    margin-left: 150px;
+  }
+}
+@media screen and (max-width: 320px) {
+  #page5 {
+    height: 850px;
+  }
+  .contact {
+    flex-direction: column;
+  }
+  form {
+    margin-right: 0;
+    padding: 10px;
+  }
+  form input {
+    width: 280px;
+  }
+  form textarea {
+    width: 280px;
+  }
+  form .submit {
+    margin-left: 180px;
+  }
+  .contact-left {
+    width: 300px;
+    padding: 20px;
+  }
+}
 * {
   box-sizing: border-box;
 }
