--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -40,12 +40,9 @@ p {
         color: $white;
     }
 }
-    
-    
-
 
 #page1 {
-    height: 800px;
+    height: 650px;
     background-color: $darkblue;
     padding: 5% 0;
     
@@ -88,3 +85,18 @@ p {
 }
 }
 
+@media screen and (max-width: 768px) {
+     #page1 {
+        height: 700px;
+     }
+     .socialMedia {
+        padding-top: 20px;
+     }
+}
+
+@media screen and (max-width: 320px) {
+    .socialMedia {
+        padding-top: 20px;
+    }
+    
+}
